--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: java
 
 jdk:
-  - oraclejdk11
+  - oraclejdk9
+jobs:  
+  include:
+    - stage: "Tests"                # naming the Tests stage
+      name: "Unit Tests"            # names the first Tests stage job
+      script: ./unit-tests
