--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ jobs:
   include:
     - stage: "Tests"                # naming the Tests stage
       name: "Unit Tests"            # names the first Tests stage job
-      script: ./unit-tests
+      script: ./Calculator.java
